fix align items

--- a/src/blocks/filter/__label-text/filter__label-text.css
+++ b/src/blocks/filter/__label-text/filter__label-text.css
@@ -1,6 +1,7 @@
 .filter__label-text {
 	position: relative;
 	display: flex;
+	align-items: center;
 	font-weight: 400;
 	font-size: 18px;
 	font-style: normal;
